# gemini-backend

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  README_RUN.md  compose.dev.yml  compose.neo4j.dev.yml  compose.redis.dev.yml  kubernetes.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/agents/: bug-fixer.md  feature-implementer.md
.github/workflows/: ci.yml  docker.yml
.kiro/hooks/: sync-docs-on-source-change.kiro.hook  sync-inline-docs-on-source-change.kiro.hook
app/: __init__.py  config.py  db.py  dependencies.py  main.py  redis.py  schemas.py
app/cruds/: beam_lines.py  item_connections.py  item_kinds.py  items.py  line_item_adjacents.py  line_item_connections.py  line_item_kinds.py  line_items.py
app/routers/: __init__.py  beam_lines.py  item_connections.py  item_kinds.py  items.py  line_item_adjacents.py  line_item_connections.py  line_item_kinds.py  line_items.py
app/schemas/: __init__.py  beam_lines.py  common.py  item_connections.py  item_kinds.py  items.py  line_item_adjacents.py  line_items.py  (+2 more)
tests/: conftest.py  test_beam_lines.py  test_beamlines.py  test_cruds_beam_lines.py  test_cruds_item_connections.py  test_cruds_item_kinds.py  test_cruds_items.py  test_cruds_line_item_adjacents.py  test_cruds_line_item_connections.py  test_cruds_line_item_kinds.py  test_cruds_line_items.py  test_health.py  test_item_connections.py  test_item_kinds.py  test_items.py  test_line_item_adjacents.py  test_line_item_connections.py  test_line_item_kinds.py  test_line_items.py  test_redis.py
