[project]
name = "gemini-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Giovanni Savarese",email = "giovanni.savarese@lnl.infn.it"}
]
license = {text = "EUPL v1.2"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "uvicorn[standard] (>=0.48.0,<0.49.0)"
]
