[project]
name = "gemini-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Giovanni Savarese",email = "giovanni.savarese@lnl.infn.it"}
]
license = {text = "EUPL v1.2"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "neo4j (>=6.2.0,<7.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.15,<0.16.0)",
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
